Add doctrine file upload listener, change some admin templates.

--- a/src/TriplogBundle/Resources/views/Admin/user.index.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/user.index.html.twig
@@ -43,7 +43,7 @@
                     <td>{{ user.gender }}</td>
                     <td>{{ user.roles|join(",") }}</td>
                     <td>
-                        <a href="#" class="btn btn-primary"><i class="fa fa-pencil-square" aria-hidden="true"></i> Edit</a>
+                        <a href="{{ path('admin_trip_user_edit', { "id" : user.id }) }}" class="btn btn-primary"><i class="fa fa-pencil-square" aria-hidden="true"></i> Edit</a>
                         <a href="#" class="btn btn-danger"><i class="fa fa-minus-square" aria-hidden="true"></i> Delete</a>
                     </td>
                 </tr>
