--- a/src/TriplogBundle/Resources/views/Admin/Category/new.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/Category/new.html.twig
@@ -21,10 +21,13 @@
         <div class="form-wrapper">
             {{ form_start(categoryForm) }}
             {{ form_row(categoryForm.tripCatName, {
-                'label' : 'Category name*'
+                'label' : 'Category name'
+            }) }}
+            {{ form_row(categoryForm.tripCatImage, {
+                'label' : 'Category image'
             }) }}
             {{ form_row(categoryForm.createdAt, {
-                'label' : 'Date*'
+                'label' : 'Date'
             }) }}
             <button type="submit" class="btn btn-primary" formnovalidate>Add</button>
             {{ form_end(categoryForm) }}
