--- a/src/TriplogBundle/Resources/views/Admin/Location/new.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/Location/new.html.twig
@@ -21,10 +21,10 @@
         <div class="form-wrapper">
             {{ form_start(locationForm) }}
             {{ form_row(locationForm.trip, {
-                'label' : 'Trip*'
+                'label' : 'Trip'
             }) }}
             {{ form_row(locationForm.tripCategory,{
-                'label' : 'Category*'
+                'label' : 'Category'
             }) }}
             {{ form_row(locationForm.tripLocName,{
                 'label' : 'Location'
@@ -39,7 +39,7 @@
                 'label' : 'Public'
             }) }}
             {{ form_row(locationForm.createdAt,{
-                'label' : 'Date*'
+                'label' : 'Date'
             }) }}
             <button type="submit" class="btn btn-primary" formnovalidate>Add</button>
             {{ form_end(locationForm) }}
