--- a/src/TriplogBundle/Resources/views/Admin/Trip/new.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/Trip/new.html.twig
@@ -21,10 +21,10 @@
         <div class="form-wrapper">
             {{ form_start(tripForm) }}
             {{ form_row(tripForm.tripName,{
-                'label' : 'Name*',
+                'label' : 'Name',
             }) }}
             {{ form_row(tripForm.user,{
-                'label' : 'User*',
+                'label' : 'User',
             }) }}
             {{ form_row(tripForm.tripDesc,{
                 'label' : 'Description'
@@ -33,7 +33,7 @@
                 'label' : 'Public'
             }) }}
             {{ form_row(tripForm.createdAt, {
-                'label' : 'Date*'
+                'label' : 'Date'
             }) }}
             <button type="submit" class="btn btn-primary" formnovalidate>Add</button>
             {{ form_end(tripForm) }}
