Add image to admin listings.

--- a/src/TriplogBundle/Resources/views/Admin/Category/delete.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/Category/delete.html.twig
@@ -32,6 +32,14 @@
                     'class' : 'hidden'
                 }
             }) }}
+            {{ form_row(categoryForm.tripCatImage, {
+                'label_attr' : {
+                    'class' : 'hidden'
+                },
+                'attr': {
+                    'class' : 'hidden'
+                }
+            }) }}
             {{ form_row(categoryForm.createdAt, {
                 'label_attr' : {
                     'class' : 'hidden'
